--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
                 </a>
                 <div class="links">
                     <li><a class="one" href="News">News</a></li>
-                    <li><a href="Offers">Offers</a></li>
-                    <li><a href="Events">Events</a></li>
+                    <li><a href="#">Offers</a></li>
+                    <li><a href="#">Events</a></li>
                 </div>
                 <div class="containerr">
                     <div class="con-one">
