--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
             <section class="find-us width-m">
                 <div class="service ">
                     <a href="#" class="menu">
-                        <i class="fa-solid fa-bars"></i>
+                        <!-- <i class="fa-solid fa-bars"></i> -->
+                        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglemobile" aria-controls="navbarTogglemobile"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                        </button>
                     </a>
+                    
                     <div class="links">
                         <!-- <h1>Doctors Society</h1> -->
                         <div class="health-img"><a href="index.html"><img src="./image/index/sasthya.png" alt=""></a></div>
@@ -61,8 +67,17 @@
     
             </section>
         </div>
+        <div class="menu-items collapse" id="navbarTogglemobile">
+            <nav class="nav navbar-nav">
+                <ul class="navbar-nav mr-auto">
+                    <li><a href="doctors.html">Find Doctor</a></li>
+                    <li><a href="hospital.html">Find Hospital</a></li>
+                    <li><a href="ambulance.html">Find Ambulance</a></li>
+                    <li><a href="shop.html">Shop Now</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-
 
     <!-- bodyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy -->
 
