--- a/doctors.html
+++ b/doctors.html
@@ -46,7 +46,12 @@
             <section class="find-us width-m">
                 <div class="service ">
                     <a href="#" class="menu">
-                        <i class="fa-solid fa-bars"></i>
+                        <!-- <i class="fa-solid fa-bars"></i> -->
+                        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglemobile" aria-controls="navbarTogglemobile"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                        </button>
                     </a>
                     <div class="links">
                         <!-- <h1>Doctors Society</h1> -->
@@ -64,6 +69,16 @@
                 </div>
     
             </section>
+        </div>
+        <div class="menu-items collapse" id="navbarTogglemobile">
+            <nav class="nav navbar-nav">
+                <ul class="navbar-nav mr-auto">
+                    <li><a href="doctors.html">Find Doctor</a></li>
+                    <li><a href="hospital.html">Find Hospital</a></li>
+                    <li><a href="ambulance.html">Find Ambulance</a></li>
+                    <li><a href="shop.html">Shop Now</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
 
@@ -760,7 +775,7 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script type="text/javascript">
         $(function () {
         $("#datepicker").datepicker({ 
