--- a/hospital.html
+++ b/hospital.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -38,7 +38,12 @@
             <section class="find-us width-m">
                 <div class="service ">
                     <a href="#" class="menu">
-                        <i class="fa-solid fa-bars"></i>
+                        <!-- <i class="fa-solid fa-bars"></i> -->
+                        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglemobile" aria-controls="navbarTogglemobile"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                        </button>
                     </a>
                     <div class="links">
                         <!-- <h1>Doctors Society</h1> -->
@@ -55,6 +60,16 @@
                 </div>
     
             </section>
+        </div>
+        <div class="menu-items collapse" id="navbarTogglemobile">
+            <nav class="nav navbar-nav">
+                <ul class="navbar-nav mr-auto">
+                    <li><a href="doctors.html">Find Doctor</a></li>
+                    <li><a href="hospital.html">Find Hospital</a></li>
+                    <li><a href="ambulance.html">Find Ambulance</a></li>
+                    <li><a href="shop.html">Shop Now</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
     <div class="sign width-m">
@@ -440,6 +455,7 @@
 
         <span class="cr">Copyright © 2022 Doctors Society. All rights reserved.</span>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script>
         $('.owl-carousel').owlCarousel({
         loop: true,
