--- a/ambulance.html
+++ b/ambulance.html
@@ -327,6 +327,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="/script.js"></script>
     <script>
         $('.owl-carousel').owlCarousel({
         loop: true,
@@ -364,5 +365,6 @@
         });
 
     </script>
+
 </body>
 </html>
